feat(pnn): 상호작용·추천·AI 연동 일괄 개선 (2026-03-20 devlog 기준)
- 앱: SafeArea 하단 패딩, 상호작용 결과 요약/약품명/drugName, 데이터부족 UI, 약별 아코디언
- Case B: condition·프롬프트 개편, RecommendationResult·구매 링크
- 백엔드: 성분 permit fallback·환각 방지, Interaction 순차 LLM+지연, 타임아웃, DrugDetail ingredientNamesEng
- AI: 상호작용 WARNING/SAFE·SAFE 최대 2건·프롬프트 정리, gemini 모델 ID·list_models 스크립트
- 프론트: 상호작용 등급 UI 단순화, 약 요약 영문 성분 목록
- 기타: Hibernate SQL 로그 축소, VS Code bin 제외, devlog·frontend-design 보강